# spatial_model_builder

./: .gitattributes  README.md
keras-yolo/: config.py  helpers.py  model.py  requirements.txt  train.py
ros_nodes/darknet_ros/: CMakeLists.txt  README.md  package.xml
ros_nodes/darknet_ros/config/: coco.data  coco.names
ros_nodes/darknet_ros/launch/: test_cam.launch  yolo_ros.launch
ros_nodes/darknet_ros/msg/: bbox.msg
ros_nodes/darknet_ros/src/: run_yolo.cpp  yolo_ros.cpp  yolo_ros.h
ros_nodes/head_search/: CMakeLists.txt  README.md  package.xml
ros_nodes/head_search/include/head_search/: entity.h  searchmanager.h
ros_nodes/head_search/launch/: search.launch
ros_nodes/head_search/src/: entity.cpp  head_search.cpp  searchmanager.cpp
ros_nodes/head_search/srv/: FindEntity.srv
ros_nodes/head_server/: CMakeLists.txt  README.md  package.xml
ros_nodes/head_server/config/: dynamixel_joint_controllers1.yaml  dynamixel_joint_controllers2.yaml  dynamixel_joint_controllers3.yaml  dynamixel_joint_controllers4.yaml
ros_nodes/head_server/include/head_server/: headmanager.h
ros_nodes/head_server/launch/: server.launch
ros_nodes/head_server/src/: head_server.cpp  headmanager.cpp
ros_nodes/head_server/urdf/: 3dofhead.sim.urdf.xacro  3dofhead.urdf.xacro  standalone.urdf.xacro  ubot7_common.gazebo.xacro  ubot7_common.urdf.xacro
ros_nodes/head_server/urdf/gazebo_plugins/: ubot7.transmissions.xacro
ros_nodes/head_server/urdf/sensors/: asus.gazebo.xacro  ubot7.gazebo.sensors.xacro
ros_nodes/ubot_control/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
ros_nodes/ubot_control/action/: Bracing.action
ros_nodes/ubot_control/nodes/: ubot_action_manager.py
ros_nodes/ubot_control/src/nodes/: gaze_control_client.cpp  gaze_control_server.cpp  gaze_control_server_ubot7.cpp  gaze_controller.cpp
ros_nodes/ubot_control/srv/: GazeControlFeedback.srv  GazeTarget.srv  InitiateBracing.srv
